@@ -1,3 +1,4 @@
+- package promotion must respect strict_arch
 - enhance sorted graph by better taking into account conflicts from state->{rejected}
   (fixes "big transaction" in urpmi split-transactions--strict-require.t test)
 
